font is the folder, not fonts....bugs all squashed

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,9 +1,14 @@
 @import-normalize;
-@import './font.css';
+@import 'font.css';
 /* normalize lib is from create react app and homogenizes default settings between browsers */
 @import 'recipe-list.css';
 
 
-*, *::before, * ::after {
+*, *::before, *::after {
     font-family: Gotham Rounded, sans-serif;
+}
+
+body {
+    padding: 0;
+    margin: 0;
 }
