--- a/src/css/recipe-list.css
+++ b/src/css/recipe-list.css
@@ -5,5 +5,8 @@
 }
 
 .recipe-list_add-recipe-btn-container {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    text-align: center;
 
 }
